[package]
name = "repro"
version = "0.1.0"
edition = "2021"

[lints.rust]
dead_code = "deny"
elided_named_lifetimes = "deny"
unused_imports = "deny"
unused_variables = "deny"

[dependencies]
anyhow = "1.0.75"
clickhouse = { version = "0.13.2", features = ["rustls-tls", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time", "time"] }
